# wvu-ieng-331-final-21

./: DESIGN.md  GRADE.md  README.md  cohort_retnetion.sql  delivery_time_analysis.sql  pipeline.py  queries.py  seller_scorecoard.sql  validation.py
.zed/: settings.json
python/: pipeline.py  pyproject.toml  queries.py  validation.py
sql/: abc_classification.sql  delivery_time_analysis.sql  monthly_revenue.sql
