[project]
name = "wvu-ieng-331-final-21"
version = "0.1.0"
description = "Olist supply chain data product — Team 21"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "altair>=5.0.0",
    "openpyxl>=3.1.0",
    "loguru>=0.7.0",
]

[project.scripts]
wvu-ieng-331-final-21 = "wvu_ieng_331_final_21.pipeline:main"

[build-system}
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wvu_ieng_331_final_21"]
